# enpo

./: .gitignore  README.md  RESULTS_GUIDE.md  export_wandb_data.py  generate_results.py  launch_training.py  memory_analysis.md  parameter_training_analysis.md  pyproject.toml  train.py
config/: compare_analysis_results.yaml  generate_results.yaml  hidden_states_analysis.yaml  train.yaml
config/experiment/: l1-l2-ablation.yaml
config/task/: unlearning_enpo.yaml  unlearning_ga.yaml  unlearning_npo.yaml
config/text_encoder/: qwen3-embedding-0.6b.yaml  qwen3-embedding-4b.yaml  qwen3-embedding-8b.yaml
data/rwku/: download_rwku_data.sh
project/: pre_trained_model.py
project/tasks/: COMPARE_USAGE.md  README_hidden_states_analysis.md  compare_analysis_results.py  hidden_states_analysis.py  unlearning_atu.py  unlearning_enpo.py  unlearning_ga.py  unlearning_npo.py
project/utils/: callbacks.py
